--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "keywords": [],
   "engines": {
-      "node": ">=5.6.0"
+    "node": ">=5.6.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-fetch": "^1.5.0",
     "restify": "^4.0.4",
     "skype-sdk": "./skype-sdk.tar.gz"
   }
