--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "stockbot_agent",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "url": "https://github.com/plkumar/StockBot"
+  },
   "main": "stockbot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "botbuilder": "^0.8.0",
     "node-fetch": "^1.5.0",
     "restify": "^4.0.4",
     "skype-sdk": "./skype-sdk.tar.gz"
