--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "botbuilder": "^0.8.0",
+    "botbuilder": "0.10.2",
     "node-fetch": "^1.5.0",
     "restify": "^4.0.4",
     "skype-sdk": "./skype-sdk.tar.gz"
