--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "stockbot_agent",
-  "version": "1.0.0",
-  "description": "",
-  "repository": {
-    "url": "https://github.com/plkumar/StockBot"
-  },
-  "main": "stockbot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "engines": {
-    "node": ">=5.6.0"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "botbuilder": "0.10.2",
-    "node-fetch": "^1.5.0",
-    "restify": "^4.0.4",
-    "skype-sdk": "./skype-sdk.tar.gz"
-  }
+    "name": "stockbot_agent",
+    "version": "1.0.0",
+    "description": "",
+    "repository": {
+        "url": "https://github.com/plkumar/StockBot"
+    },
+    "main": "stockbot.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "engines": {
+        "node": ">=5.6.0"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "botbuilder": "^3.1.1",
+        "node-fetch": "^1.5.0",
+        "restify": "^4.0.4"
+    }
 }
